--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -11,27 +11,27 @@
   <meta name="author" content="">
   <meta name="keywords" content="">
   <meta name="description" content="">
-
-<link rel="stylesheet" href="css/swiper.css" />
-<link rel="stylesheet" href="css/bootstrap.css" />
-
-<link rel="stylesheet" type="text/css" href="css/vendor.css">
-<link rel="stylesheet" type="text/css" href="style.css">
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Chilanka&family=Montserrat:wght@300;400;500&display=swap"
-  rel="stylesheet">
-
+  
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/swiper.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/vendor.css">
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/style.css">
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Chilanka&family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <script src="js/jquery-1.11.0.min.js"></script>
-    <script src="js/swiper.js"></script>
-    <script src="js/bootstrap.bundle.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/script.js"></script>
-    <script src="js/iconify.js"></script>
-  </body>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  
+  <script src="%PUBLIC_URL%/js/jquery-1.11.0.min.js"></script>
+  <script src="%PUBLIC_URL%/js/swiper.js"></script>
+  <script src="%PUBLIC_URL%/js/bootstrap.bundle.js"></script>
+  <script src="%PUBLIC_URL%/js/plugins.js"></script>
+  <script src="%PUBLIC_URL%/js/script.js"></script>
+  <script src="%PUBLIC_URL%/js/iconify.js"></script>
+</body>
+
 </html>
